test_scores/negative_dimers/features/Q16533.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q16533.pkl.xz